// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Compiler (react) should build the example with config complete.json 1`] = `
Object {
  "1.1301c85d2dc2c33cb304.css": "51dbb481a1fc1082c149f5d9154d8901",
  "1.1301c85d2dc2c33cb304.js": "a5b3fe680b9d1004cb80ed15bfc58f51",
  "1.1301c85d2dc2c33cb304.js.map": "7bfed44e0ba71209437e41ab12c350af",
  "2.bf18163718a8126bae33.js": "8f9d8e8c9db493b414bed4793cc4de65",
  "2.bf18163718a8126bae33.js.map": "5c3545c4437c7ccb1d84832674c0ea4b",
  "240683d2dd7c5a158ee48c70703a2a0a-1200.jpg": "240683d2dd7c5a158ee48c70703a2a0a",
  "5c917367a9adfba3f1e904ed920580be-600.jpg": "5c917367a9adfba3f1e904ed920580be",
  "8f42a999073e8fe5caf83406f0e1d690-1920.jpg": "8f42a999073e8fe5caf83406f0e1d690",
  "c29e3724f0ae14c777b61c09ee20e73b-300.jpg": "c29e3724f0ae14c777b61c09ee20e73b",
  "index.html": "22b98bb0ef442e28944fd9f2d9e1de72",
  "main.eea9587ec3d0c93b66a0.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.eea9587ec3d0c93b66a0.js": "d724b655ad18aab73defccf5efd94448",
  "main.eea9587ec3d0c93b66a0.js.map": "370b8971b694f938f674ed2b3e37cab3",
  "manifest.87b32a799dbaa7d6c737.js": "4bb7c2688372efcbcebd498ed67301b8",
  "manifest.87b32a799dbaa7d6c737.js.map": "0481fb9c42d09de93d1c50042b5eb2c9",
  "sw.js": "629b247bfec743ff17d3271793deb7ad",
  "vendors.73e7eab981f4843d700b.css": "5f622c70ad714c19d4d4ff863401721f",
  "vendors.73e7eab981f4843d700b.js": "a685c1b74b8f3ff5d6747da75d24ab1a",
  "vendors.73e7eab981f4843d700b.js.map": "fbcdb8e77ae0eb260c912ea71974a30a",
}
`;

exports[`Compiler (react) should build the example with config disabled.json 1`] = `
Object {
  "1.1301c85d2dc2c33cb304.css": "51dbb481a1fc1082c149f5d9154d8901",
  "1.1301c85d2dc2c33cb304.js": "a5b3fe680b9d1004cb80ed15bfc58f51",
  "1.1301c85d2dc2c33cb304.js.map": "7bfed44e0ba71209437e41ab12c350af",
  "2.bf18163718a8126bae33.js": "8f9d8e8c9db493b414bed4793cc4de65",
  "2.bf18163718a8126bae33.js.map": "5c3545c4437c7ccb1d84832674c0ea4b",
  "b02330cbe0a6272c907bdb4e12b97b7c.jpg": "be5bdc38e858972b37353622a1079182",
  "index.html": "e3c6fa6227f6ca3323f938b82f234069",
  "main.0713ce1d917e53acccc8.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.0713ce1d917e53acccc8.js": "428a643879109dc49b309178544932d0",
  "main.0713ce1d917e53acccc8.js.map": "8f1a08133d87ff0948ae61a4a2fb674e",
  "manifest.87b32a799dbaa7d6c737.js": "4bb7c2688372efcbcebd498ed67301b8",
  "manifest.87b32a799dbaa7d6c737.js.map": "0481fb9c42d09de93d1c50042b5eb2c9",
  "sw.js": "422eac0ec5b2d3f943a2e2a9bcd99db3",
  "vendors.73e7eab981f4843d700b.css": "5f622c70ad714c19d4d4ff863401721f",
  "vendors.73e7eab981f4843d700b.js": "a685c1b74b8f3ff5d6747da75d24ab1a",
  "vendors.73e7eab981f4843d700b.js.map": "fbcdb8e77ae0eb260c912ea71974a30a",
}
`;

exports[`Compiler (react) should build the example with config from package.json 1`] = `
Object {
  "1.1301c85d2dc2c33cb304.css": "51dbb481a1fc1082c149f5d9154d8901",
  "1.1301c85d2dc2c33cb304.js": "a5b3fe680b9d1004cb80ed15bfc58f51",
  "1.1301c85d2dc2c33cb304.js.map": "7bfed44e0ba71209437e41ab12c350af",
  "2.bf18163718a8126bae33.js": "8f9d8e8c9db493b414bed4793cc4de65",
  "2.bf18163718a8126bae33.js.map": "5c3545c4437c7ccb1d84832674c0ea4b",
  "240683d2dd7c5a158ee48c70703a2a0a-1200.jpg": "240683d2dd7c5a158ee48c70703a2a0a",
  "5c917367a9adfba3f1e904ed920580be-600.jpg": "5c917367a9adfba3f1e904ed920580be",
  "8f42a999073e8fe5caf83406f0e1d690-1920.jpg": "8f42a999073e8fe5caf83406f0e1d690",
  "bar/index.html": "d7b7baab35f5d95016adc2777051b48f",
  "c29e3724f0ae14c777b61c09ee20e73b-300.jpg": "c29e3724f0ae14c777b61c09ee20e73b",
  "icon_128x128.deb0a118869f6d69fcc5e9852ad32d81.png": "deb0a118869f6d69fcc5e9852ad32d81",
  "icon_192x192.f5d0f0f2ed01fca7cb69e70f6af11529.png": "f5d0f0f2ed01fca7cb69e70f6af11529",
  "icon_256x256.4661d370dd248c9f9d48e78c8a07776d.png": "4661d370dd248c9f9d48e78c8a07776d",
  "icon_96x96.1c0003f895382900e1a8ce6fa0a1b672.png": "1c0003f895382900e1a8ce6fa0a1b672",
  "index.html": "ba1371f9f27926cd881804c6550e8cb8",
  "main.eea9587ec3d0c93b66a0.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.eea9587ec3d0c93b66a0.js": "d724b655ad18aab73defccf5efd94448",
  "main.eea9587ec3d0c93b66a0.js.map": "370b8971b694f938f674ed2b3e37cab3",
  "manifest.87b32a799dbaa7d6c737.js": "4bb7c2688372efcbcebd498ed67301b8",
  "manifest.87b32a799dbaa7d6c737.js.map": "0481fb9c42d09de93d1c50042b5eb2c9",
  "manifest.bc9f52edf87c052e960e4516d360c190.json": "bc9f52edf87c052e960e4516d360c190",
  "sw.js": "31a56c25861c953585e9ff402b00ebb0",
  "vendors.73e7eab981f4843d700b.css": "5f622c70ad714c19d4d4ff863401721f",
  "vendors.73e7eab981f4843d700b.js": "a685c1b74b8f3ff5d6747da75d24ab1a",
  "vendors.73e7eab981f4843d700b.js.map": "fbcdb8e77ae0eb260c912ea71974a30a",
}
`;

exports[`Compiler (react) should build the example with config image-optimization-disabled.json 1`] = `
Object {
  "1.1301c85d2dc2c33cb304.css": "51dbb481a1fc1082c149f5d9154d8901",
  "1.1301c85d2dc2c33cb304.js": "a5b3fe680b9d1004cb80ed15bfc58f51",
  "1.1301c85d2dc2c33cb304.js.map": "7bfed44e0ba71209437e41ab12c350af",
  "2.bf18163718a8126bae33.js": "8f9d8e8c9db493b414bed4793cc4de65",
  "2.bf18163718a8126bae33.js.map": "5c3545c4437c7ccb1d84832674c0ea4b",
  "b02330cbe0a6272c907bdb4e12b97b7c.jpg": "be5bdc38e858972b37353622a1079182",
  "index.html": "b5e8a75614435ad246a54438aa52f57e",
  "main.0713ce1d917e53acccc8.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.0713ce1d917e53acccc8.js": "428a643879109dc49b309178544932d0",
  "main.0713ce1d917e53acccc8.js.map": "8f1a08133d87ff0948ae61a4a2fb674e",
  "manifest.87b32a799dbaa7d6c737.js": "4bb7c2688372efcbcebd498ed67301b8",
  "manifest.87b32a799dbaa7d6c737.js.map": "0481fb9c42d09de93d1c50042b5eb2c9",
  "sw.js": "422eac0ec5b2d3f943a2e2a9bcd99db3",
  "vendors.73e7eab981f4843d700b.css": "5f622c70ad714c19d4d4ff863401721f",
  "vendors.73e7eab981f4843d700b.js": "a685c1b74b8f3ff5d6747da75d24ab1a",
  "vendors.73e7eab981f4843d700b.js.map": "fbcdb8e77ae0eb260c912ea71974a30a",
}
`;

exports[`Compiler (react) should build the example with config manifest.json 1`] = `
Object {
  "1.1301c85d2dc2c33cb304.css": "51dbb481a1fc1082c149f5d9154d8901",
  "1.1301c85d2dc2c33cb304.js": "a5b3fe680b9d1004cb80ed15bfc58f51",
  "1.1301c85d2dc2c33cb304.js.map": "7bfed44e0ba71209437e41ab12c350af",
  "2.bf18163718a8126bae33.js": "8f9d8e8c9db493b414bed4793cc4de65",
  "2.bf18163718a8126bae33.js.map": "5c3545c4437c7ccb1d84832674c0ea4b",
  "b02330cbe0a6272c907bdb4e12b97b7c.jpg": "be5bdc38e858972b37353622a1079182",
  "icon_128x128.deb0a118869f6d69fcc5e9852ad32d81.png": "deb0a118869f6d69fcc5e9852ad32d81",
  "icon_192x192.f5d0f0f2ed01fca7cb69e70f6af11529.png": "f5d0f0f2ed01fca7cb69e70f6af11529",
  "icon_256x256.4661d370dd248c9f9d48e78c8a07776d.png": "4661d370dd248c9f9d48e78c8a07776d",
  "icon_96x96.1c0003f895382900e1a8ce6fa0a1b672.png": "1c0003f895382900e1a8ce6fa0a1b672",
  "index.html": "294ffdc3d5ce87c7655431d2c6ae1d18",
  "main.0713ce1d917e53acccc8.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.0713ce1d917e53acccc8.js": "428a643879109dc49b309178544932d0",
  "main.0713ce1d917e53acccc8.js.map": "8f1a08133d87ff0948ae61a4a2fb674e",
  "manifest.87b32a799dbaa7d6c737.js": "4bb7c2688372efcbcebd498ed67301b8",
  "manifest.87b32a799dbaa7d6c737.js.map": "0481fb9c42d09de93d1c50042b5eb2c9",
  "manifest.bc9f52edf87c052e960e4516d360c190.json": "bc9f52edf87c052e960e4516d360c190",
  "sw.js": "5766a36410a8ff956c241aca7e1b68bf",
  "vendors.73e7eab981f4843d700b.css": "5f622c70ad714c19d4d4ff863401721f",
  "vendors.73e7eab981f4843d700b.js": "a685c1b74b8f3ff5d6747da75d24ab1a",
  "vendors.73e7eab981f4843d700b.js.map": "fbcdb8e77ae0eb260c912ea71974a30a",
}
`;

exports[`Compiler (react) should build the example with config preload-lazy-chunks.json 1`] = `
Object {
  "1.1301c85d2dc2c33cb304.css": "51dbb481a1fc1082c149f5d9154d8901",
  "1.1301c85d2dc2c33cb304.js": "a5b3fe680b9d1004cb80ed15bfc58f51",
  "1.1301c85d2dc2c33cb304.js.map": "7bfed44e0ba71209437e41ab12c350af",
  "2.bf18163718a8126bae33.js": "8f9d8e8c9db493b414bed4793cc4de65",
  "2.bf18163718a8126bae33.js.map": "5c3545c4437c7ccb1d84832674c0ea4b",
  "240683d2dd7c5a158ee48c70703a2a0a-1200.jpg": "240683d2dd7c5a158ee48c70703a2a0a",
  "5c917367a9adfba3f1e904ed920580be-600.jpg": "5c917367a9adfba3f1e904ed920580be",
  "8f42a999073e8fe5caf83406f0e1d690-1920.jpg": "8f42a999073e8fe5caf83406f0e1d690",
  "c29e3724f0ae14c777b61c09ee20e73b-300.jpg": "c29e3724f0ae14c777b61c09ee20e73b",
  "index.html": "22b98bb0ef442e28944fd9f2d9e1de72",
  "main.eea9587ec3d0c93b66a0.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.eea9587ec3d0c93b66a0.js": "d724b655ad18aab73defccf5efd94448",
  "main.eea9587ec3d0c93b66a0.js.map": "370b8971b694f938f674ed2b3e37cab3",
  "manifest.87b32a799dbaa7d6c737.js": "4bb7c2688372efcbcebd498ed67301b8",
  "manifest.87b32a799dbaa7d6c737.js.map": "0481fb9c42d09de93d1c50042b5eb2c9",
  "sw.js": "8535f46b9a718f36f9f29c3242993604",
  "vendors.73e7eab981f4843d700b.css": "5f622c70ad714c19d4d4ff863401721f",
  "vendors.73e7eab981f4843d700b.js": "a685c1b74b8f3ff5d6747da75d24ab1a",
  "vendors.73e7eab981f4843d700b.js.map": "fbcdb8e77ae0eb260c912ea71974a30a",
}
`;

exports[`Compiler (react) should build the example with config prerender-disabled.json 1`] = `
Object {
  "1.1301c85d2dc2c33cb304.css": "51dbb481a1fc1082c149f5d9154d8901",
  "1.1301c85d2dc2c33cb304.js": "a5b3fe680b9d1004cb80ed15bfc58f51",
  "1.1301c85d2dc2c33cb304.js.map": "7bfed44e0ba71209437e41ab12c350af",
  "2.bf18163718a8126bae33.js": "8f9d8e8c9db493b414bed4793cc4de65",
  "2.bf18163718a8126bae33.js.map": "5c3545c4437c7ccb1d84832674c0ea4b",
  "240683d2dd7c5a158ee48c70703a2a0a-1200.jpg": "240683d2dd7c5a158ee48c70703a2a0a",
  "5c917367a9adfba3f1e904ed920580be-600.jpg": "5c917367a9adfba3f1e904ed920580be",
  "8f42a999073e8fe5caf83406f0e1d690-1920.jpg": "8f42a999073e8fe5caf83406f0e1d690",
  "c29e3724f0ae14c777b61c09ee20e73b-300.jpg": "c29e3724f0ae14c777b61c09ee20e73b",
  "index.html": "a5d12def13d14cb54b5d9314d40a4e88",
  "main.eea9587ec3d0c93b66a0.css": "7861def0e3928a6ff8b473840ce73a4e",
  "main.eea9587ec3d0c93b66a0.js": "d724b655ad18aab73defccf5efd94448",
  "main.eea9587ec3d0c93b66a0.js.map": "370b8971b694f938f674ed2b3e37cab3",
  "manifest.87b32a799dbaa7d6c737.js": "4bb7c2688372efcbcebd498ed67301b8",
  "manifest.87b32a799dbaa7d6c737.js.map": "0481fb9c42d09de93d1c50042b5eb2c9",
  "sw.js": "629b247bfec743ff17d3271793deb7ad",
  "vendors.73e7eab981f4843d700b.css": "5f622c70ad714c19d4d4ff863401721f",
  "vendors.73e7eab981f4843d700b.js": "a685c1b74b8f3ff5d6747da75d24ab1a",
  "vendors.73e7eab981f4843d700b.js.map": "fbcdb8e77ae0eb260c912ea71974a30a",
}
`;
